@@ -1,3 +1,8 @@
+2002-05-10  Paolo Maggi <maggi@athena.polito.it>
+
+	* gedit-print.c: fixed bug #79733, now the default
+	is to print to a printer
+
 2002-05-09  Paolo Maggi <maggi@athena.polito.it>
 
 	* gedit-print.c: changed the print dialog title
